# vpp

./: README.md  Themen.md
vpp_lecture/: 170125.cpp  20241213Main.cpp  CCMakeLists.txt  buch.h  csWithRating.txt  v20250117Main.cpp
vpp_p01/: CMakeLists.txt  P01Test.pro  bohrung.cpp  bohrung.h  fraesung.cpp  fraesung.h  gtest_dependency.pri  komponente.cpp  komponente.h  komponentenelement.cpp  komponentenelement.h  komponentenlist.cpp  komponentenlist.h  p01Main.cpp  p01TestMain.cpp  p01test.h
vpp_p02/: CMakeLists.txt  bohrung.cpp  bohrung.h  delist.cpp  delist.h  fraesung.cpp  fraesung.h  ikomponente.cpp  ikomponente.h  ikomponentenelement.h  iterator.cpp  iterator.h  komponente.cpp  komponente.h  p02Main.cpp  p02TestMain.cpp  p02test.h  werkstueck.cpp  werkstueck.h
vpp_p02/.cache/clangd/index/: bohrung.cpp.7E4EC966AFD7EECB.idx  bohrung.h.73835B36EE5C3112.idx  delist.cpp.51E35D9C2A98C085.idx  delist.h.0CDD3D71E4F1E77D.idx  fraesung.cpp.B710895F78256086.idx  fraesung.h.3CDBD7E3632F04A5.idx  ikomponente.cpp.C47C7C09EC6C87B1.idx  ikomponente.h.EC4151BB0133E696.idx  ikomponentenelement.h.CF47BF402F34552F.idx  iterator.cpp.B29CD1C846501270.idx  iterator.h.2EDB1C03AE7F2DC3.idx  komponente.cpp.F2FC29CDDC2210F4.idx  komponente.h.22D14CDE75BC94C5.idx  p02Main.cpp.5A586A2CA96ABB3C.idx  p02TestMain.cpp.8FBD3E6B79153F1C.idx  p02test.h.B39D263ABECA7660.idx  werkstueck.cpp.2712EEC5A6844F49.idx  werkstueck.h.6AC4CE563D9EBD90.idx
vpp_p03/: Bohrung.cpp  Bohrung.h  DeList.cpp  DeList.h  Fraesung.cpp  Fraesung.h  IKomponente.h  Iterator.h  Komponente.cpp  Komponente.h  P02Main.cpp  Serializer.cpp  Serializer.h  Werkstueck.cpp  Werkstueck.h  gtest_dependency.pri  ikomponente.cpp  telement.h  v3test.h  v3test.pro  v3test_main.cpp
vpp_zusatzaufgaben/: AufgabenTest.pro  AufgabenTest.pro.user.a61fe07  CMakeLists.txt  a04.cpp  a04.h  gtest_dependency.pri  hochlager.cpp  hochlager.h  iprodukt.cpp  iprodukt.h  produkt.cpp  produkt.h  produktmitpreishistory.cpp  produktmitpreishistory.h  testZusatzAufgabenMain.cpp  tst_testaufgaben.h
